Git_WGBH_QC/src/objects/Merchant_Accounts__c.object
<CustomObject>
    <description>merchant key and id info for Sage charge processing</description>
    <fields>
        <fullName>EFT_Merchant_ID__c</fullName>
        <label>EFT Merchant ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFT_Merchant_Key__c</fullName>
        <label>EFT Merchant Key</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFT_ORIGINATOR_ID__c</fullName>
        <label>EFT ORIGINATOR ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_ID__c</fullName>
        <externalId>true</externalId>
        <label>Merchant ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Merchant_Key__c</fullName>
        <externalId>true</externalId>
        <label>Merchant Key</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <description>The station the merchant key/id combo is valid for</description>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Merchant Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Station__c</columns>
        <columns>NAME</columns>
        <columns>Merchant_ID__c</columns>
        <columns>Merchant_Key__c</columns>
        <columns>EFT_Merchant_ID__c</columns>
        <columns>EFT_ORIGINATOR_ID__c</columns>
        <columns>EFT_Merchant_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merchant Accounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchant Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>